--- a/css/style.css
+++ b/css/style.css
@@ -31,43 +31,73 @@
 
 * {
   font-family: "Roboto", sans-serif, serif;
-  /* keyinchalik tushunib olamiz */
-  margin: 0;
+  box-sizing: border-box;
+}
+
+.container {
+  width: 100%;
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 .list-none {
   list-style: none;
 }
 
+.orange-line {
+  background-color: #FF7500;
+  width: 80px;
+  height: 3px;
+  border: none;
+  margin: 0;
+}
+
 .site-logo {
   transition: opacity 0.5s ease;
 }
+
 .site-logo:hover {
   opacity: 0.8;
 }
+
 .site-logo:active {
   opacity: 0.6;
 }
 
+.site-header .active {
+  border-bottom: 3px solid #FF7500;
+}
+
 .site-header {
   background-color: #fff;
+  border-top: 5px solid #FF7500;
+  padding: 16px 0;
+}
+
+.header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-top: 5px solid #FF7500;
-  padding: 16px 0;
 }
 
 .site-header-nav {
   display: flex;
   align-items: center;
-  gap: 32px;
 }
- 
+
 .site-header-list {
   display: flex;
-  gap: 32px;
   padding: 0;
+  margin-right: 32px;
+}
+
+.sitenav-list-item {
+  margin-right: 32px;
+}
+
+.sitenav-list-item:last-child {
+  margin-right: 0;
 }
 
 .sitenav-link {
@@ -78,6 +108,7 @@
   color: #000;
   text-decoration: none;
   transition: color 0.5s ease, opacity 0.5s ease;
+  padding: 4px 0;
 }
 
 .sitenav-link:hover {
@@ -104,16 +135,24 @@
 .main-link:hover {
   opacity: 0.8;
 }
+
 .main-link:active {
   opacity: 0.6;
 }
 
 .hero-section {
   background-color: #252420;
+  padding: 80px 0;
+}
+
+.hero-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 80px 0;
+}
+
+.hero-line {
+  margin-bottom: 40px;
 }
 
 .hero-content {
@@ -125,12 +164,6 @@
   border-radius: 8px;
 }
 
-.orange-line {
-  background-color: #FF7500;
-  width: 80px;
-  height: 3px;
-  border: none;
-}
 
 .hero-title {
   font-family: "Roboto Condensed";
@@ -138,6 +171,8 @@
   font-weight: 700;
   line-height: 48px;
   letter-spacing: 0.5px;
+  margin-top: 0;
+  margin-bottom: 24px;
 }
 
 .hero-text {
@@ -145,10 +180,16 @@
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.5px;
+  margin-top: 0;
+  margin-bottom: 32px;
 }
 
 .feature-section {
   padding: 210px 0;
+}
+
+.feature-line {
+  margin-bottom: 24px;
 }
 
 .feature-title {
@@ -157,17 +198,28 @@
   font-size: 72px;
   line-height: 86px;
   letter-spacing: 0.5px;
+  margin-top: 0;
+  margin-bottom: 72px;
 }
 
 .feature-list {
   display: flex;
-  justify-content: space-between;
   padding: 0;
+  margin: 0;
 }
 
 .feature {
   width: 340px;
   color: #000;
+  margin-right: 40px;
+}
+
+.feature:last-child {
+  margin-right: 0;
+}
+
+.feature img {
+  margin-bottom: 24px;
 }
 
 .feature-item-title {
@@ -175,6 +227,8 @@
   font-size: 24px;
   line-height: 28px;
   letter-spacing: 0.5px;
+  margin-top: 0;
+  margin-bottom: 12px;
 }
 
 .feature-item-text {
@@ -182,14 +236,20 @@
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.5px;
+  margin: 0;
 }
 
 .sale {
+  padding-top: 120px;
+  padding-bottom: 160px;
+}
+
+.sale-container {
   background-color: #252420;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 64px 0;
+  padding: 64px;
   border-radius: 12px;
 }
 
@@ -207,6 +267,12 @@
   line-height: 48px;
   letter-spacing: 0.5px;
   font-size: 40px;
+  margin-top: 0;
+  margin-bottom: 24px;
+}
+
+.sale-desc {
+  margin-bottom: 24px;
 }
 
 .sale-text {
@@ -214,6 +280,12 @@
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.5px;
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+
+.sale-text:last-child {
+  margin-bottom: 0;
 }
 
 .primary-text {
@@ -230,26 +302,50 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 40px;
 }
 
 .footer-top-list {
   display: flex;
-  gap: 16px;
   padding: 0;
+}
+
+.footer-top-list li {
+  margin-right: 16px;
+}
+
+.footer-top-list li:last-child {
+  margin-right: 0;
 }
 
 .footer-divider {
   height: 2px;
   background-color: #25242080;
+  margin-bottom: 64px;
 }
 
 .footer-bottom {
   display: flex;
-  justify-content: space-between;
 }
 
 .footer-bottom-list {
   padding: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  width: 224px;
+  margin-right: 68px;
+}
+
+.footer-bottom-list:last-child {
+  margin-right: 0;
+}
+
+.footer-bottom-list li {
+  margin-bottom: 16px;
+}
+
+..footer-bottom-list li:last-child {
+  margin-bottom: 0;
 }
 
 .footer-link {
