--- a/css/style.css
+++ b/css/style.css
@@ -309,6 +309,7 @@
 .footer-top-list {
   display: flex;
   padding: 0;
+  margin: 0px;
 }
 
 .footer-top-list li {
@@ -345,7 +346,7 @@
   margin-bottom: 16px;
 }
 
-..footer-bottom-list li:last-child {
+.footer-bottom-list li:last-child {
   margin-bottom: 0;
 }
 
